--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,11 @@
 ################################################################################
 
 /.vs/ScreenMusic
-/ScreenMusic.Api/bin/Debug/net8.0
+/ScreenMusic.Api/bin
 /ScreenMusic.Api/obj
-/ScreenMusic.Arguments/bin/Debug/net8.0
+/ScreenMusic.Arguments/bin
 /ScreenMusic.Arguments/obj
-/ScreenMusic.Domain/bin/Debug/net8.0
-/ScreenMusic.Domain/obj/Debug/net8.0
+/ScreenMusic.Domain/bin
 /ScreenMusic.Domain/obj
-/ScreenMusic.Infraestructure/bin/Debug/net8.0
-/ScreenMusic.Infraestructure/obj/Debug/net8.0
+/ScreenMusic.Infraestructure/bin
 /ScreenMusic.Infraestructure/obj
