feat(projeto web)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /ScreenMusic.Domain/obj
 /ScreenMusic.Infraestructure/bin
 /ScreenMusic.Infraestructure/obj
+/ScreenMusic.Web/bin
+/ScreenMusic.Web/obj
