--- a/ScreenMusic.Api/ScreenMusic.Api.csproj
+++ b/ScreenMusic.Api/ScreenMusic.Api.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\ScreenMusic.Infraestructure\ScreenMusic.Infraestructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
