--- a/ScreenMusic.Domain/ScreenMusic.Domain.csproj
+++ b/ScreenMusic.Domain/ScreenMusic.Domain.csproj
@@ -8,7 +8,9 @@
 
     <ItemGroup>
 	    <PackageReference Include="AutoMapper" Version="13.0.1" />
+	    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
 	    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
+	    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.6" />
 	    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
     </ItemGroup>
