--- a/ScreenMusic.Api/appsettings.Development.json
+++ b/ScreenMusic.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataBase": "server=localhost;database=screenmusic;user=root;password=1234"
   }
 }
