fix(ajustes e melhorias)

--- a/ScreenMusic.Api/ScreenMusic.Api.csproj
+++ b/ScreenMusic.Api/ScreenMusic.Api.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\ScreenMusic.Infraestructure\ScreenMusic.Infraestructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\ProfilePhotos\" />
+  </ItemGroup>
+
 </Project>
