--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿/.vs
-/ScreenMusic.Api/wwwwroot
+/ScreenMusic.Api/wwwroot/ProfilePhotos/
 /ScreenMusic.Api/bin
 /ScreenMusic.Api/obj
 /ScreenMusic.Arguments/bin
