--- a/ScreenMusic.Web/ScreenMusic.Web.csproj
+++ b/ScreenMusic.Web/ScreenMusic.Web.csproj
@@ -9,9 +9,9 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-		<PackageReference Include="MudBlazor" Version="6.17.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageReference Include="MudBlazor" Version="6.11.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -19,9 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Update="Pages\CreateMusicGenre.razor">
-	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-	  </Content>
+		<Folder Include="wwwroot\images\" />
 	</ItemGroup>
 
 </Project>
