fix(correção de problema com execução do blazor)

--- a/ScreenMusic.Web/wwwroot/appsettings.json
+++ b/ScreenMusic.Web/wwwroot/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ScreenMusicApi": {
-    "Url": "https://localhost:7089"
+    "Url": "https://localhost:7089/"
   }
 }
