--- a/ScreenMusic.WebMvc/appsettings.Development.json
+++ b/ScreenMusic.WebMvc/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ScreenMusicApi": {
+    "Url": "https://localhost:7089"
   }
 }
